--- a/guides/index.html
+++ b/guides/index.html
@@ -2,20 +2,58 @@
 title: Welcome
 ---
 <div class="hero">
+  <div class="hero-title">
+    <img src="{{ site.baseurl }}/graphql-ruby.png" />
+    <h1>GraphQL Ruby</h1>
+  </div>
+  <div class="hero-part shaded">
+    <h2>Install the Gem</h2>
+    <div class="hero-feature">
+      <div class="teaser">
+{% highlight bash %}
+# Download the gem:
+gem install graphql
+# Setup with Rails:
+rails generate graphql:install
+{% endhighlight %}
+      </div>
+      <div class="teaser">
+        <p>
+          <a href="{{ site.baseurl}}/getting_started">Get going fast</a> with the <code><a href="https://rubygems.org/gems/graphql">graphql</a></code> gem,
+          battle-tested and trusted by <a href="https://githubengineering.com/the-github-graphql-api/#open-source">GitHub</a> and <a href="http://www.graphql.com/articles/graphql-at-shopify">Shopify</a>.
+        </p>
+      </div>
+    </div>
+  </div>
   <div class="hero-part">
     <h2>Define Your Schema</h2>
+    <div class="hero-feature">
+      <div class="teaser">
+        <p>
+          Describe your application with the
+          <a href="{{ site.baseurl }}/types/introduction">GraphQL type system</a>
+          to create a self-documenting, strongly-typed API.
+        </p>
+      </div>
+      <div class="teaser">
 {% highlight ruby %}
-GraphQL::ObjectType.define do
+# app/graphql/types/profile_type.rb
+Types::ProfileType = GraphQL::ObjectType.define do
   name "Profile"
   field :id, !types.ID
   field :name, !types.String
   field :avatar, Types::PhotoType
 end
 {% endhighlight %}
+      </div>
+    </div>
   </div>
-  <div class="hero-part">
+  <div class="hero-part shaded">
     <h2>Run Queries</h2>
+    <div class="hero-feature">
+      <div class="teaser">
 {% highlight ruby %}
+# app/controllers/graphql_controller.rb
 result = MySchema.execute(
   params[:query],
   variables: params[:variables],
@@ -23,9 +61,17 @@ result = MySchema.execute(
 )
 render json: result
 {% endhighlight %}
+      </div>
+      <div class="teaser">
+        <p>
+          <a href="{{ site.baseurl }}/queries/executing_queries">Serve queries</a> to build a great UI or webservice.
+        </p>
+      </div>
+    </div>
   </div>
+
 </div>
-<p style="text-align: center;">
-  Build a GraphQL server in Ruby.
-  <a href="{{ site.baseurl}}/getting_started">Get Started</a>
-</p>
+
+<h3 style="text-align: center;">
+  Add <a href="http://graphql.org">GraphQL</a> to your Ruby app. <a href="{{ site.baseurl}}/getting_started">Get Started!</a>
+</h3>
