--- a/guides/index.html
+++ b/guides/index.html
@@ -3,7 +3,7 @@ title: Welcome
 ---
 <div class="hero">
   <div class="hero-title">
-    <img src="{{ site.baseurl }}/graphql-ruby.png" />
+    <img src="{{ site.baseurl }}/graphql-ruby.png" alt="GraphQL Ruby Logo"/>
     <h1>GraphQL Ruby</h1>
   </div>
   <div class="hero-part shaded">
